HelloUltraviolet/Fixtures/RejectedSource/Procedures/SelfTypeDefinition/Expected.uv
//! Expected diagnostic metadata for the SelfTypeDefinition rejected-source specimen.

expectedDiagnostic("", "def.15.SelfType")
